# Engram-platform

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_GENERATION_SUMMARY.md  CERTIFICATION_REPORT.md  CHANGELOG.md  CHANGELOG_2026-03-09_COMPREHENSIVE_REVIEW.md  CHANGELOG_2026-03-09_PULL_ENGRAM_PLATFORM.md  CHANGELOG_2026-03-14_AI_MEMORY_WEAVIATE_AUDIT.md  CHANGELOG_2026-03-14_QA_FRAMEWORK.md  CHANGELOG_2026-03-14_TEST_COVERAGE.md  CHANGELOG_2026-03-15_FRONTEND_UI_UX_FIXES.md  CHANGELOG_2026-03-15_MONOREPO_CLEANUP.md  CHANGELOG_2026-03-16_AI_SERVICES_AUDIT.md  CHANGELOG_2026-03-16_SYSTEM_ADMIN_DASHBOARD.md  CHANGELOG_2026-03-17_READINESS_REVIEW_ACTION_PLAN.md  CHANGELOG_2026-03-17_UNIFIED_OPS_SPEC.md  CHANGELOG_2026-03-18_40_POLISHES_REPORT.md  CHANGELOG_2026-03-18_AUDIT_REMEDIATION.md  CHANGELOG_2026-03-18_AUTOPILOT_REPORT.md  CHANGELOG_2026-03-18_DEPLOYMENT_SCRIPT_UPDATES.md  CHANGELOG_2026-03-18_RELEASE_SPRINT.md  CHANGELOG_2026-03-19_PRE_DEPLOYMENT_REVIEW.md  CHANGELOG_2026-03-19_PYTHON_311_COMPATIBILITY.md  CHANGELOG_2026-03-20_FRONTEND_POLISH.md  CLAUDE.md  DEFECT_REGISTER.md  DEPLOYMENT_CONFIG_FIXES.md  DEPLOYMENT_STATUS_REPORT_2026-03-28.md  ENGRAM_ADMIN_GUIDE.md  ENGRAM_PLATFORM_HEALTH_AND_SETUP_GUIDE.md  LOOP1_SUMMARY.md  LOOP2_SUMMARY.md  LOOP3_SUMMARY.md  LOOP4_SUMMARY.md  MEMORY_FEATURES.md  PRODUCTION_SETUP.md  PROGRAM_COMPLETE.md  PROGRESS_REPORT.md  PROJECT_ROADMAP.md  (+6 more)
Engram-AiMemory/: .env.example  .env.production.example  .gitignore  1  AGENTS.md  AI_INTEGRATIONS_MAP.md  CHANGELOG.md  CODE_AUDIT_2026-03-14.md  ENGRAM_MEMORY_SERVICE_MAP.md  Makefile  README.md  TEST_INFRASTRUCTURE_REPORT.md  biome.json  docker-compose.test.yml  fix_api_search_temporal.py  fix_client_temporal_search.py  fix_fastapi_exception_handlers.py  fix_memory_query.py  fix_system_temporal_search.py  fix_temporal_import.py  fix_workers_all.py  fix_workers_syntax.py  fix_workers_syntax_2.py  mcp-install.json  package-lock.json  package.json  pyproject.toml  pytest.ini  revert_workers.py  sonar-project.properties
Engram-AiMemory/.aistore/: Ubuntu_Memory_Knowledge_Server_Architecture.md
Engram-AiMemory/.aistore/05_research/: Weaviate Best Practises for single small to medium.md  Weaviate_proj.md  crawler-deployment-proposal.md  weaviate-homelab-guide.md  weaviate-multitenant-final.md
Engram-AiMemory/.aistore/05_research/Weaviate_Official/: 01_quickstart_guide.md  02_python_client_reference.md  03_collections_schema.md  04_queries_filters.md  05_multitenancy.md  06_data_operations.md  07_rag_generative.md  08_vector_indexing.md  09_modules_configuration.md  10_backup_restore.md  11_cross_references.md  12_named_vectors.md
Engram-AiMemory/.aistore/docs/: INSTALL.md
Engram-AiMemory/.aistore/sisyphus-drafts/: ai-memory-system-plan.md  dashboard-overhaul.md  memory-system-upgrade.md
Engram-AiMemory/.github/: dependabot.yml
Engram-AiMemory/.github/workflows/: ci.yml  docker-build.yml
Engram-AiMemory/01_devroot/RemoteAgent/agent/: .env.example  pyproject.toml
Engram-AiMemory/01_devroot/RemoteAgent/dev/orchestrator/: package.json
Engram-AiMemory/01_devroot/RemoteAgent/dev/python/: .env.example  agent.py  api_server.py  document_processor.py  embedding_worker.py  requirements.txt  state_manager.py  weaviate_client.py
Engram-AiMemory/01_devroot/RemoteAgent/orchestrator/: package.json
Engram-AiMemory/04_branding/: .gitignore
Engram-AiMemory/04_branding/00_Approved/: engram-brand-guide.html
Engram-AiMemory/04_branding/MarketingDev/engram-landing/: CHANGELOG.md  Dockerfile  KNOWLEDGE_BASE_POLISH_SUMMARY.md  PLATFORM_DESIGN_POLISH.md  next.config.ts  nginx.static.conf  package-lock.json  package.json
Engram-AiMemory/05_research/weaviate_memory/: context.py  decay.py  rag.py  tenant.py
Engram-AiMemory/docker/: AGENTS.md  Dockerfile.dashboard  Dockerfile.mcp-server  Dockerfile.memory-api  docker-compose.prod.yml  docker-compose.yml  nginx.conf
Engram-AiMemory/docker/traefik/: dynamic.yml  traefik.yml
Engram-AiMemory/docs/: README.md
Engram-AiMemory/scripts/: AGENTS.md  deploy-full.sh  deploy-server.sh  deploy.sh  e2e_test.py  healthcheck.sh  manage.sh  system-optimize.sh  test-weaviate-integration.sh  ubuntu-install.sh  validate-env.sh
Engram-AiMemory/scripts/testing/: weaviate-smoke-tests.sh
Engram-AiMemory/tests/: test_api_module_import.py  test_workers_module_import.py
engram-shared/: AGENTS.md  INDEX.md  QUICKSTART.md  README.md  pyproject.toml
engram-shared/src/engram_shared/: __init__.py  auth.py  config.py  health.py  http.py  logging.py
(+1232 files in other folders)
